# irrigation_system

./: .env  .gitignore  README.md  Readme.md  app.log.1  database_schema.json  dockerfile  main.py  plant.py  post.py  pyproject.toml  requirements.txt  service  update_repo.py  update_repo.sh
.github/workflows/: main.yml
app/: create_documents.py  logging_config.py  main.py
app/database/: connection.py  database.py  queries.py
app/database/models/: irrigation_controllers.py  logs.py  plants.py  pumps.py  (+3 more)
app/helpers/: create_plant.py  create_plant_firebase.py  create_pump.py  create_schedule.py  create_sensors.py  thread_safe_list.py
app/models/: __init__.py  plant.py
app/services/: database_monitoring_service.py  database_service.py  irrigation_service.py  sensor_service.py
app_alt/: logging_config.py  main.py  redis.conf
app_alt/services/: database_service.py  sensor_service.py
app_async/: logging_config.py  main.py
app_async/database/: database.py
app_async/services/: database_service.py  irrigation_service.py
irrigation_controller/: irrigation_service.py  pyproject.toml  sensor_service.py
server_app/: logging_config.py  main.py
server_app/database/: database.py
server_app/helpers/: create_plant.py  create_schedule.py  create_sensors.py
server_app/services/: database_service.py  irrigation_service.py
tests/: irrigation_controller_test.py  logs_test.py  plant_test.py  pump_test.py  realtime_sensor_data_test.py  schedules_test.py  sensor_test.py  test_main_controller.py
website/: app.py  requirements.txt
website/templates/: index.html
(+16 files in other folders)
