[project]
name = "irrigation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adafruit-circuitpython-dht>=4.0.8 ; platform_machine == 'armv7l' and sys_platform == 'linux'",
    "concurrent-log-handler>=0.9.26",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "rpi-gpio>=0.7.1 ; platform_machine == 'armv7l' and sys_platform == 'linux'",
    "schedule>=1.2.2",
    "types-rpi-gpio>=0.7.0.20250318",
]
